# CLI-Library-C

./: .gitignore  CMakeLists.txt  README.md  build.sh
demo/: hotreload_loader.c  hotreload_loader.h  main.c
examples/hello_tui/: main.c
include/: cli_core.h  framework_state.h  hot_reload.h  input.h  screen.h  termiui.h
include/components/: label.h
include/core/: component.h  runtime.h  tui_core.h
include/render/: screen.h
src/: actor_casting.cpp  actors.c  backstage.c  cli_core.c  conductor.c  director.c  framework_state.c  hot_reload.c  input.c  main.c  screen.c  utils.c
src/components/: label.c
src/core/: component.c  runtime.c  tui_core.c
src/render/: screen.c
